responsive mazes & fixed circle alignment

--- a/src/maze.css
+++ b/src/maze.css
@@ -1,3 +1,8 @@
 body {
     margin: 0;
 }
+
+#maze_wrapper{
+    width: 100%;
+    height: 100vh;
+}
